✨DB 세팅, 도메인 설계